Fix horizontal scroller for big tables

--- a/public/assets/ccs3-operator.css
+++ b/public/assets/ccs3-operator.css
@@ -304,7 +304,7 @@ fieldset {
 
 table {
   border-spacing: 0;
-  width: max-content;
+  width: fit-content;
 }
 
 table caption {
